Fix text align for title, change key for weapon deiscard to delete button

--- a/assets/stylesheets/master.css
+++ b/assets/stylesheets/master.css
@@ -159,6 +159,7 @@ canvas {
   width: 341px;
   /* border: 2px solid; */
   margin-bottom: 15px;
+  text-align: center;
 }
 
 .index-body {
